Fixed navbar display issue: title overflowing below navbar edge

--- a/css/allstyle.css
+++ b/css/allstyle.css
@@ -73,18 +73,26 @@ a    {
 /* RESPONSIVE NAVIGATION BAR */
 .topnav {
     background-color: #ffb400;
-    font-family: Oswald;
-    font-size: 27px;
     height: 100px;
     overflow: hidden;
     position: fixed;
     width: 100%;
 }
 
+#title {
+    color: #ffffff;
+    float: left;
+    font-family: Bungee, Helvetica;
+    font-size: 89px;
+    height: 100px;
+    text-decoration: none;
+}
 .topnav-right a {
     color: #2f2f2f;
     display: inline-block;
     float: right;
+    font-family: Oswald;
+    font-size: 22px;
     height: 100px;
     padding-top: 40px;
     padding-left: 20px;
@@ -126,14 +134,6 @@ a    {
 }
 
 
-/* TITLE */
-#title {
-    float: left;
-    text-decoration: none;
-    font-family: Bungee, Helvetica;
-    font-size: 89px;
-    color: #ffffff;
-}
 
 /* FOOTER */
 #footer {
